gnome-clocks 3.38.0
===================
 * Alarms: Allow setting snooze/ring duration
 * World: Redesign the Add World Clock dialog by Matyáš
 * Various design refinement

gnome-clocks 3.37.91
===================
 * Updated translations

gnome-clocks 3.37.90
===================
 * World: Redesign the Add World Clock dialog by Matyáš
 * Various design refinement

gnome-clocks 3.36.2
===================
 * World: Handle impossible places
 * Timer: Fix signal for updating the duration

gnome-clocks 3.36.0
===================
 * Major redesign of the application
 * Multiple timers support
 * Daylight status for World clocks
 * Adaptive layout: Mobile support
 * Updated translations

gnome-clocks 3.34.0
===================

 * Updated translations

gnome-clocks 3.33.1
===================

 * Expose world clock locations to gnome-shell
 * Updated translations

gnome-clocks 3.32.0
===================

 * Updated translations

gnome-clocks 3.31.2
===================

 * Update icon
 * Updated translations

gnome-clocks 3.31.1
===================

 * Replace Appmenu with a menu button
 * Update icon
 * Updated translations

gnome-clocks 3.30.1
===================

 * Flatpak package improvements

gnome-clocks 3.30.0
===================

 * Updated translations

gnome-clocks 3.28.0
===================

 * Search: workaround crash due to libgweather serialization
 * Updated translations

gnome-clocks 3.27.1
===================

 * World clocks: add UTC and "Anywhere on Earth" clocks
 * Updated translations

gnome-clocks 3.26.1
===================

 * Updated translations

gnome-clocks 3.26.0
===================

 * Fix installation of locale data
 * Updated translations

gnome-clocks 3.25.90
===================

 * Updated translations

gnome-clocks 3.25.2
===================

 * Converted World clocks and Alarms to GtkFlowBox
 * Require Meson 0.41.0
 * Updated translations

gnome-clocks 3.25.1
===================

 * World clocks: show state name when available