@@ -49,6 +49,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="40.beta" date="2021-02-14" type="development" />
     <release version="3.38.0" date="2020-09-15" type="stable">
       <description>
         <p>A new release of Clocks</p>
@@ -68,7 +69,7 @@
           <li>World: Handle impossible places</li>
           <li>Timer: Fix signal for updating the duration</li>
         </ul>
-      </description>    
+      </description>
     </release>
     <release version="3.36.0" date="2020-03-01" type="stable">
       <description>
@@ -80,7 +81,7 @@
           <li>Adaptive layout: Mobile support</li>
           <li>Updated translations</li>
         </ul>
-      </description>    
+      </description>
     </release>
     <release version="3.34.0" date="2019-09-09" type="stable" />
     <release version="3.31.1" date="2018-11-11" type="development" />
