@@ -1,3 +1,9 @@
+gnome-clocks 40.beta
+===================
+ * World Location Dialog: Match HdyStatusPage styling
+ * Added ALT + 1,2,3,4 navigation between pages.
+ * Bugfixes & translations updates
+
 gnome-clocks 3.38.0
 ===================
  * Alarms: Allow setting snooze/ring duration
